server/adventure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adventure
  namespace: ttubeot-adventure
  labels:
    app: adventure
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: adventure
  template:
    metadata:
      labels:
        app: adventure
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "worker"
      containers:
      - name: adventure
        image: tkdqja9573/ssafy-final-adventure
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
        resources:
          requests:
            cpu: "200m"
          limits:
            cpu: "400m"
