server/adventure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adventure
  namespace: ttubeot-adventure
  labels:
    app: adventure
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: adventure
  type: ClusterIP
